matches service done, some api docs fixes
