# matches-service/routes/matchesRoutes.js
@@ -1,0 +1,7 @@
+const express = require('express');
+const router = express.Router();
+const matchController = require('../controllers/matchController');
+
+router.get('/matches', matchController.getAllMatches);
+
+module.exports = router;
